--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Lyon",
   "dependencies": {
     "antd": "^3.20.0",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
     "gatsby": "^2.13.3",
